--- a/clase11/views/home.html
+++ b/clase11/views/home.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="static/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
+            <img src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
             <p>Lugar para poner barra de búsqueda</p>
             <p><!--iconito de mano-->Comprá en cuotas y sin tarjeta de crédito</p>
             <nav>
@@ -25,27 +25,27 @@
             </nav>
         </header>
         <section>
-            <img src="static/images/img-home-banner.jpg" width="360" alt="Banner de ofertas">
+            <img src="/images/img-home-banner.jpg" width="360" alt="Banner de ofertas">
         </section>
         <main>
             <section>
                 <h3>Basado en tu última visita</h3>
-                <img src="static/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
+                <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
                 <!--iconito de camión-->
                 <p >$6.770</p>
                 <p>40% off</p>
                 <h4>Cafetera Moulinex</h4>
-                <img src="static/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
+                <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
                 <!--iconito de camión-->
                 <p >$230.000</p>
                 <p>20% off</p>
                 <h4>MacBook Pro 2019</h4>
-                <img src="static/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                 <!--iconito de camión-->
                 <p >$70.500</p>
                 <p>10% off</p>
                 <h4>Teléfono móvil Samsung Galaxy S10</h4>
-                <img src="static/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
+                <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
                 <!--iconito de camión-->
                 <p >$23.200</p>
                 <p>5% off</p>
@@ -53,22 +53,22 @@
             </section>
             <section>
                 <h3>Ofertas</h3>      
-                <img src="static/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
+                <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
                 <!--iconito de camión-->
                 <p >$6.770</p>
                 <p>40% off</p>
                 <h4>Cafetera Moulinex</h4>
-                <img src="static/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
+                <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
                 <!--iconito de camión-->
                 <p >$230.000</p>
                 <p>20% off</p>
                 <h4>MacBook Pro 2019</h4>
-                <img src="static/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                 <!--iconito de camión-->
                 <p >$70.500</p>
                 <p>10% off</p>
                 <h4>Teléfono móvil Samsung Galaxy S10</h4>
-                <img src="static/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
+                <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
                 <!--iconito de camión-->
                 <p >$23.200</p>
                 <p>5% off</p>
